<resources>
    <string name="app_name">AndroidLevel1</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="application_form">Application form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sms">Смс рассылка</string>
    <string name="sms_alert">Отметьте для получения смс оповещения</string>
    <string name="email_alert">Email рассылка</string>
    <string name="email_alert_text">Отметьте для получения email оповещения</string>
    <string name="agree">Согласие</string>
    <string name="agree_alert">Согласие на обработку персональных данных</string>
</resources>