<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="315dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textColor="@color/titlecolor"
        android:text="@string/application_form"
        android:textSize="42sp"></TextView>

    <EditText
        android:id="@+id/nameId"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:hint="@string/name"
        android:ems="15"
        android:inputType="textPersonName"
        android:textSize="22sp"></EditText>

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:hint="@string/phone"
        android:ems="15"
        android:inputType="phone"
        android:textSize="22sp"></EditText>

    <EditText
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:hint="@string/email"
        android:ems="15"
        android:inputType="textEmailAddress"
        android:textSize="22sp"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/switchTextBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/switchTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_alert"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="2dp">
            <Switch
                android:id="@+id/switchId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"></Switch>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp" >

            <TextView
                android:id="@+id/toggleBtnLgnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_alert"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/toggleBtnSmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_alert_text"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="2dp"></LinearLayout>
        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleBtnId"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"></ToggleButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/textViewColorLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textViewColorSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_alert"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="2dp">
            <CheckBox                android:id="@+id/checkBoxColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Save"></Button>

</LinearLayout>